<resources>

    <string name="app_name">example-link</string>
    <string name="hello_world">Hello world!</string>

    <string name="splash_logo">KakaoLink Example App</string>
    
    
    
    <string name="kakolink_talk">KakaoLink for KakaoTalk</string>
    <string name="kakolink_talk_url_link">Talk - send URL Link</string>
    <string name="kakolink_talk_app_link">Talk - send App data</string>
    
    <string name="kakolink_story">KakaoLink for KakaoStory</string>
    <string name="kakolink_story_url_link">Story - send URL Link</string>
    <string name="kakolink_story_image_app_link">Story - send Image App data(OS contents)</string>
    
</resources>