<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_background"
    android:orientation="vertical" >

    <include
        android:id="@+id/main_activity_layout_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/kakolink_talk"
        android:textSize="20sp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendUrlLink"
        android:text="@string/kakolink_talk_url_link" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendAppData"
        android:text="@string/kakolink_talk_app_link" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/kakolink_story"
        android:textSize="20sp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendPostingLink"
        android:text="@string/kakolink_story_url_link" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendPostingImage"
        android:text="@string/kakolink_story_image_app_link" />

</LinearLayout>